# DarwinProject

./: .gitignore  CALCULATE_DISTANCE.h  DetectionManagerState.h  MotionClass.cpp  README.md  StateServer.cpp  kill.sh  start.sh
Deprecated/: .GrabbingManager.cpp.swp  Assessment1  DarwinInit.cpp  DarwinInit.hpp  GrabbingManager.cpp  GrabbingManager.hpp  LTSA.lts  LTSA.txt  WalkingManager.cpp  WalkingManager.hpp  main.cpp
DetectionManager/: CALCULATE_DISTANCE.cpp  CALCULATE_DISTANCE.h  CMakeLists.txt  DetectionClass.cpp  DetectionClass.h  DetectionManager  DetectionManager.cpp  DetectionManager.h  DetectionManagerState.cpp  DetectionManagerState.h  LOOK_FOR_CUP.cpp  LOOK_FOR_CUP.h  MusicPlayer  SEND_CUP_DATA.cpp  SEND_CUP_DATA.h  SocketCommunication.cpp  SocketCommunication.h  main.cpp
DetectionManager/cascades/: frontofcupcascade.xml  topofcupcascade.xml
LTSA/: overview.lts  state_server_combined.lts
MotionManager/: .main.cpp.swp  CMakeLists.txt  GRAB.cpp  GRAB.h  IDLE.cpp  IDLE.h  MotionClass.cpp  MotionClass.h  MotionManager  SocketCommunication.cpp  WALKING.cpp  WALKING.h  WalkingManagerState.cpp  WalkingManagerState.h  WalkingStateManager.cpp  WalkingStateManager.h  fsr  main.cpp
StateServer/: CMakeLists.txt  ConnectionServer.cpp  StateServer  StateServer.cpp  main.cpp
StateServer/includes/: ConnectionServer.h  StateServer.h
